--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   shared_preferences: ^2.0.8
   date_format: ^2.0.4
   url_launcher: ^6.0.12
+  sliding_sheet: ^0.5.2
+  clipboard: ^0.1.3
+  modal_bottom_sheet: ^2.0.0
 
 dev_dependencies:
   flutter_test:
